--- a/assets/sass/custom/_index.scss
+++ b/assets/sass/custom/_index.scss
@@ -59,7 +59,7 @@ button:focus {
     top: 0px;
     left: 0px;
     right: 0px;
-    z-index: 1;
+    z-index: 999;
 }
 
 //Logo
